--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,7 @@ body{
 }
 
 main{
-    background-image: url(https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=913&q=80);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: #efa4f6;
 }
 
 label{
